force-app/main/default/objects/Video__c/Video__c.object-meta.xml
<CustomObject>
    <description>Represents a YouTube Video and its stats</description>
    <label>Video</label>
    <nameField>
        <label>Video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>