force-app/main/default/objects/Video__c/fields/Comment_Count__c.field-meta.xml
<CustomField>
    <fullName>Comment_Count__c</fullName>
    <description>A YouTube Video Comment Count</description>
    <label>Comment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>