force-app/main/default/objects/Video__c/fields/Dislike_Count__c.field-meta.xml
<CustomField>
    <fullName>Dislike_Count__c</fullName>
    <description>A YouTube Video Dislike Count</description>
    <label>Dislike Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>