force-app/main/default/objects/Video__c/fields/Favorite_Count__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Count__c</fullName>
    <description>A YouTube Video Favorite Count</description>
    <label>Favorite Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>