force-app/main/default/objects/Video__c/fields/Like_Count__c.field-meta.xml
<CustomField>
    <fullName>Like_Count__c</fullName>
    <description>A YouTube Video Like Count</description>
    <label>Like Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>