force-app/main/default/objects/Video__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <description>A YouTube Video ID</description>
    <externalId>true</externalId>
    <label>Video ID</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>