force-app/main/default/objects/Video__c/fields/View_Count__c.field-meta.xml
<CustomField>
    <fullName>View_Count__c</fullName>
    <description>A YouTube Video View Count</description>
    <label>View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>